Enables Java 8 compatibility